---
source: src/tql_validator.rs
expression: "(translate_result, split_by_line_and_trim_spaces(sql))"
---
- Ok: ~
- - SELECT
  - "    \"~/books/things\".id, \"~/books/things\".title, \"~/books/things\".subtitle,"
  - "    \"~/books/things\".image_url, \"~/books/things\".external_link,"
  - "    \"~/books/things\".external_link_title, \"~/books/things\".excluded"
  - "FROM \"~/books/things\""
  - "WHERE \"~/books/things\".id = ?"
  - LIMIT 1
